# dmi-assistant

./: .env.example  Cargo.toml  Config.example.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yaml
assets/fonts/: fontello.toml
src/: config.rs  dmi_model.rs  dmi_utils.rs  icon.rs  lib.rs  main.rs  screens.rs  utils.rs
src/screens/: debugger.rs  explorer.rs  extractor.rs  viewer.rs
src/widgets/: statebox.rs
