[package]
name = "dmi_assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.1"
bytes = "1.9.0"
dmi = "0.3.7"
fern = "0.7.0"
iced = { version = "0.13.1", features = ["svg", "image"] }
iced_aw = { version = "0.11.0", features = ["drop_down", "tab_bar"] }
iced_fonts = "0.1.1"
iced_gif = { version = "0.13.0", git = "https://github.com/VladOS-0/iced_gif" }
image = "0.25.5"
log = "0.4.22"
rfd = "0.15.1"
thiserror = "2.0.6"
walkdir = "2.5.0"

[build-dependencies]
iced_fontello = "0.13.1"
winresource = "0.1.19"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.4.0"


[profile.release]
codegen-units = 1
lto = true
opt-level = 3
debug-assertions = false
overflow-checks = false

[[bin]]
name = "DMIAssistant"
path = "src/main.rs"
